@@ -55,6 +55,14 @@
   will be removed, shuffled, and redealt. Only two redeals are allowed.
   </para>
 
+    <sect2>Options</sect2>
+    <para>
+     Randomly Placed Gaps on Redeal: Check this to have randomly placed gaps 
+ after a redeal. If unchecked, the gaps will always be placed directly to the 
+ right of any cards already in sequence after redealing.
+    </para>
+
+
   <sect2>Scoring</sect2>
   <para>
     Each card placed in sequence, starting with a two in the leftmost slot,
