@@ -1,3 +1,8 @@
+2006-01-01  Callum McKenzie  <callum@spooky-possum.org>
+
+	* C/gaps.xml: Patch from Zach Keene to add an option to shuffle
+	the gaps on a redeal.
+
 2005-12-26  Callum McKenzie  <callum@spooky-possum.org>
 
 	* fr/Makefile.am (entities): Replace the missing n in
