@@ -1,3 +1,8 @@
+2006-01-01  Callum McKenzie  <callum@spooky-possum.org>
+
+	* rules/gaps.scm: Patch from Zach Keene to add an option to shuffle
+	the gaps on a redeal.
+
 2005-12-28  Callum McKenzie  <callum@spooky-possum.org>
 
 	* events.c (button_press_event): Make the middle button a
